[workspace]
resolver = "2"
members = [
    "lorosurgeon",
    "lorosurgeon-derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [] }
