[package]
name = "lorosurgeon-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macros for lorosurgeon"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
