[package]
name = "lorosurgeon-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macro crate for lorosurgeon — do not use directly"
repository = "https://github.com/rlch/lorosurgeon"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
