[package]
name = "lorosurgeon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Derive macros for bidirectional serialization between Rust types and Loro CRDT containers"
repository = "https://github.com/rlch/lorosurgeon"
documentation = "https://docs.rs/lorosurgeon"
keywords = ["loro", "crdt", "derive", "serialization", "automerge"]
categories = ["encoding", "data-structures"]
readme = "../README.md"

[lib]
crate-type = ["rlib"]

[features]
default = []
uuid = ["dep:uuid"]

[dependencies]
loro = "1"
similar = "2"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lorosurgeon-derive = { version = "0.1.1", path = "../lorosurgeon-derive" }
uuid = { version = "1", optional = true }

[lints]
workspace = true
